Servant reflex dependency; it currently doesn't work.

--- a/fht-api/fht-api.cabal
+++ b/fht-api/fht-api.cabal
@@ -18,8 +18,11 @@ library
     , lens
     , data-default-class
     , fht-data
+    -- , servant 
+    , servant-reflex == 0.3.6
     
   exposed-modules:
+    Api.Garden.Plant 
   other-modules: 
 
   default-extensions:
