[wip] output logs on the api
TODO: change the types on the api to also reflect the maintenance logs
along with the plants. This will mean fewer API calls to get plant
data.

--- a/fht-data/fht-data.cabal
+++ b/fht-data/fht-data.cabal
@@ -48,6 +48,7 @@ common common-build-depends
     , data-default-class
     , aeson
     , time
+    , http-api-data
     
 ------------------
 -- Core library --
