--- a/fht-frontend/fht-frontend.cabal
+++ b/fht-frontend/fht-frontend.cabal
@@ -26,6 +26,7 @@ executable fht-frontend
     , containers
     , lens
     , data-default-class
+    , time 
     , witherable
     -- the frontend needs the data types. 
     , fht-data
