[WIP] Unable to override packages with local env vars.
@nmattia

This is a good example. The problem package seems to be
prelude-polysemy, wwhich I'm attempting to override as described in https://github.com/nmattia/niv/issues/197#issuecomment-725325789

You can see default.nix, the overrides section to see how its being
used.

--- a/fht-backend/fht-backend.cabal
+++ b/fht-backend/fht-backend.cabal
@@ -13,7 +13,7 @@ executable fht-backend
   build-depends:
       base-noprelude 
     , text
-    , protolude 
+    , prelude-polysemy
     , containers
     , lens
     , data-default-class
@@ -42,7 +42,6 @@ executable fht-backend
   default-extensions:
     DataKinds
     FlexibleContexts
-    NoImplicitPrelude
     LambdaCase
     OverloadedStrings
     ScopedTypeVariables
