--- a/fht-data/fht-data.cabal
+++ b/fht-data/fht-data.cabal
@@ -12,7 +12,6 @@ common common-default-extensions
   default-extensions:
     DataKinds
     FlexibleContexts
-    NoImplicitPrelude
     LambdaCase
     OverloadedStrings
     ScopedTypeVariables
@@ -40,9 +39,9 @@ common common-ghc-options
     
 common common-build-depends
   build-depends:
-      base
+      base-noprelude
     , text
-    , protolude 
+    , prelude-polysemy
     , containers
     , lens
     , data-default-class
@@ -66,8 +65,6 @@ library
   hs-source-dirs:     src
   exposed-modules:
     Data.Garden.Plant
-    Control.Error
-    Control.Log
   other-modules: 
   
 -----------
