Further work: start wiring up servant.
The DB transaction is still very confusing to me. How does
interpretation work with transaction support? How do we run
transactions across the connections from the pool (but one transaction
needs to run on a single connection?).

Is it just better to use a simpler and less confusing approach at this time?

--- a/fht-backend/fht-backend.cabal
+++ b/fht-backend/fht-backend.cabal
@@ -15,6 +15,7 @@ executable fht-backend
     , text
     , prelude-polysemy
     , containers
+    , aeson
     , lens
     , data-default-class
     -- dependencies from within the project.
@@ -25,7 +26,10 @@ executable fht-backend
     , servant-server 
     -- Effects
     , polysemy
+    , arrows
+
     -- DB related
+    , dbstorage-polysemy
     , opaleye
     , resource-pool 
     , postgresql-simple 
@@ -38,6 +42,9 @@ executable fht-backend
     
   other-modules: 
     Backend.Garden.Plant 
+    Backend.Runtime
+    -- API modules
+    Backend.Api.Garden.Plant
 
   default-extensions:
     DataKinds
@@ -52,7 +59,7 @@ executable fht-backend
     PackageImports
     ViewPatterns
 
-  ghc-options:        -Wall -threaded -Wno-unused-do-bind
+  ghc-options:        -Wall -threaded -Wno-unused-do-bind -flate-specialise -fspecialise-aggressively
 
   if impl(ghcjs -any)
     ghc-options: -dedupe
