Wire-up FE to BE API calls.

--- a/fht-backend/fht-backend.cabal
+++ b/fht-backend/fht-backend.cabal
@@ -25,6 +25,8 @@ executable fht-backend
     , servant 
     , servant-server 
     , warp
+    , wai
+    , wai-extra
 
     -- Effects
     , polysemy
