Add plants (modal doesn't close yet.)
TODO: we also need to handle the #rows of plants.

--- a/fht-backend/fht-backend.cabal
+++ b/fht-backend/fht-backend.cabal
@@ -24,9 +24,12 @@ executable fht-backend
     -- Servant stuff.
     , servant 
     , servant-server 
+
+    , http-types
     , warp
     , wai
     , wai-extra
+    , wai-cors
 
     -- Effects
     , polysemy
