Add support for adding logs.

--- a/fht-backend/fht-backend.cabal
+++ b/fht-backend/fht-backend.cabal
@@ -53,6 +53,7 @@ executable fht-backend
 
     Backend.Garden.Plant 
     Backend.Garden.Plant.Types
+    Backend.Garden.Plant.Logs
 
     Backend.Runtime
     -- API modules
