--- a/fht-backend/fht-backend.cabal
+++ b/fht-backend/fht-backend.cabal
@@ -46,12 +46,14 @@ executable fht-backend
     , snowflake 
     
     , optparse-applicative
+    , composite-opaleye
     
   main-is: Main.hs
     
   other-modules: 
 
     Backend.Garden.Plant 
+    Backend.Garden.Plant.Orphans
     Backend.Garden.Plant.Types
     Backend.Garden.Plant.Logs
 
