Fix Site.nix; full docker builds.
Build as one docker image. This builds the frontend's js files,
optimises them, and puts them in the default location from which the
backend serves static files.

--- a/fht-api/fht-api.cabal
+++ b/fht-api/fht-api.cabal
@@ -43,9 +43,10 @@ library
 
   ghc-options:        -Wall -threaded -Wno-unused-do-bind
 
-  if impl(ghcjs -any)
-    ghc-options: -dedupe
-    cpp-options: -DGHCJS_BROWSER
+  -- FIXME: causes haddock to fail.
+  -- if impl(ghcjs -any)
+  --   ghc-options: -dedupe
+  --   cpp-options: -DGHCJS_BROWSER
 
   default-language:   Haskell2010
 
