--- a/fht-data/fht-data.cabal
+++ b/fht-data/fht-data.cabal
@@ -30,9 +30,9 @@ common common-default-extensions
 common common-ghc-options 
   ghc-options:        -Wall -Wno-unused-do-bind
 
-  if impl(ghcjs -any)
-    ghc-options: -dedupe
-    cpp-options: -DGHCJS_BROWSER
+  -- if impl(ghcjs -any)
+  --   -- ghc-options: -dedupe
+  --   cpp-options: -DGHCJS_BROWSER
 
   default-language:   Haskell2010
 
